--- a/files/template.html
+++ b/files/template.html
@@ -8,5 +8,59 @@
         <script   src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     </head>
     <body>
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-md-2"></div>
+                    <div class="col-md-7">
+                        <h2>Tarefas</h2>
+                    </div>
+                    <div class="col-md-3"></div>
+                </div>
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th scope="col">#</th>
+                            <th scope="col">Nome      </th>
+                            <th scope="col">Descrição </th>
+                            <th scope="col">Início    </th>
+                            <th scope="col">Final     </th>
+                            <th scope="col">Status    </th>
+                            <th scope="col">Situação  </th>                            
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <th scope="row">1</th>
+                            <td>Tarefa 2     </td>
+                            <td>Descrição 2  </td>
+                            <td>01/02/2018   </td>
+                            <td>01/03/2018   </td>
+                            <td>Pendente     </td>
+                            <td>Ativo        </td>                                                                                    
+                            <td><button type="button" class="btn btn-primary btn-rounded btn-sm my-0">Editar</button></td>
+                        </tr>
+                        <tr>
+                            <th scope="row">2</th>
+                            <td>Tarefa 2     </td>
+                            <td>Descrição 2  </td>
+                            <td>01/02/2018   </td>
+                            <td>01/03/2018   </td>
+                            <td>Em Desenvolvimento</td>
+                            <td>Ativo        </td>
+                            <td><button type="button" class="btn btn-primary btn-rounded btn-sm my-0">Editar</button></td>                            
+                        </tr>
+                        <tr>
+                            <th scope="row">3</th>
+                            <td>Tarefa 3     </td>
+                            <td>Descrição 3  </td>
+                            <td>01/02/2018   </td>
+                            <td>01/03/2018   </td>
+                            <td>Em Teste     </td>
+                            <td>Ativo        </td>
+                            <td><button type="button" class="btn btn-primary btn-rounded btn-sm my-0">Editar</button></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>        
     </body>
 </html>
