--- a/files/template.html
+++ b/files/template.html
@@ -6,6 +6,7 @@
         <link    href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
         <script   src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
         <script   src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+        <script   src="js/tasks.js"></script>
     </head>
     <body>
             <div class="container-fluid">
@@ -16,6 +17,18 @@
                     </div>
                     <div class="col-md-3"></div>
                 </div>
+                <template id="task-row">                
+                    <tr>
+                        <th scope="row">3</th>
+                        <td>Tarefa 5     </td>
+                        <td>Descrição 5  </td>
+                        <td>01/05/2018   </td>
+                        <td>01/06/2018   </td>
+                        <td>Em Teste     </td>
+                        <td>Ativo        </td>
+                        <td><button type="button" class="btn btn-primary btn-rounded btn-sm my-0">Editar</button></td>
+                    </tr>
+                </template>
                 <table class="table">
                     <thead>
                         <tr>
