--- a/files/template.html
+++ b/files/template.html
@@ -11,12 +11,16 @@
     <body>
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-md-2"></div>
                     <div class="col-md-7">
                         <h2>Tarefas</h2>
                     </div>
                     <div class="col-md-3"></div>
                 </div>
+                <div class="row">
+                    <div class="col-sm-6">
+                        <button id="add" type="button" class="btn btn-primary btn-sm">Adicionar</button>
+                    </div>
+                </div>    
                 <template id="task-row">                
                     <tr>
                         <th scope="row">{sequence}</th>
@@ -44,6 +48,69 @@
                     <tbody>
                     </tbody>
                 </table>
-            </div>        
+            </div>      
+            <div id="task-dialog" class="modal fade" role="dialog">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                            <h4 class="modal-title">Adicionar tarefa</h4>
+                        </div>
+                        <div class="modal-body">
+                            <div class="form-group row">
+                                <div class="col-sm-6"></div>
+                                <label for="example-text-input" class="col-3 col-form-label">Nome</label>
+                                    <div class="col-7">
+                                    <input class="form-control" type="text" value="" id="task-name">
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <div class="col-sm-6"></div>
+                                <label for="example-text-input" class="col-3 col-form-label">Descrição</label>
+                                    <div class="col-7">
+                                    <input class="form-control" type="text" value="" id="task-description">
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <div class="col-sm-4">
+                                    <label for="example-date-input" class="col-3 col-form-label">Início</label>
+                                    <div class="col-5">
+                                        <input class="form-control" type="date" value="" id="task-start">
+                                    </div>
+                                </div>
+                                <div class="col-sm-4">
+                                    <label for="example-date-input" class="col-3 col-form-label">Final</label>
+                                    <div class="col-5">
+                                        <input class="form-control" type="date" value="" id="task-finish">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <label class="mr-sm-2" for="inlineFormCustomSelect">
+                                    Status
+                                </label>
+                                <select class="custom-select mb-2 mr-sm-2 mb-sm-0" id="task-status">
+                                    <option selected>Status</option>
+                                    <option value="1">Um   </option>
+                                    <option value="2">Dois </option>
+                                    <option value="3">Três </option>
+                                </select>
+                                <label class="custom-control custom-checkbox mb-2 mr-sm-2 mb-sm-0">
+                                    <input type="checkbox" class="custom-control-input" id="task-active">
+                                    <span class="custom-control-indicator"></span>
+                                    <span class="custom-control-description">
+                                        Ativo
+                                    </span>
+                                </label>
+                            </div>
+                            <div class="clearfix"></div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="submit" class="btn btn-success" data-dismiss="modal">OK    </button>
+                            <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
+                        </div>
+                    </div>
+                </div>
+            </div>  
     </body>
 </html>
