--- a/files/template.html
+++ b/files/template.html
@@ -6,7 +6,7 @@
         <link    href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
         <script   src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
         <script   src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-        <script   src="js/tasks.js"></script>
+        <script   src="js/tasks.js?9"></script>
     </head>
     <body>
             <div class="container-fluid">
@@ -27,8 +27,8 @@
                 <template id="task-row">                
                     <tr>
                         <th scope="row">{sequence}</th>
-                        <td>{name}       </td>
-                        <td>{description}</td>
+                        <td class="task-name"       >{name}       </td>
+                        <td class="task-description">{description}</td>
                         <td>{start}      </td>
                         <td>{finish}     </td>
                         <td>{status}     </td>
